--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>CFS Mingo Card</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
