--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="cont">
                       <i class="fa fa-cutlery"></i>
                       <div class="tit">
-                        KALDERETA
+                        CALDERETA
                       </div>
                       <div class="desc"></div>
                       <div class="browse">
@@ -233,7 +233,7 @@
                     <div class="cont">
                       <i class="fa fa-cutlery"></i>
                       <div class="tit">
-                        LASANA
+                        LASAGNA
                       </div>
                       <div class="desc"></div>
                       <div class="browse">
@@ -305,7 +305,7 @@
                     <div class="cont">
                       <i class="fa fa-cutlery"></i>
                       <div class="tit">
-                        LETCHON
+                        LECHON
                       </div>
                       <div class="desc"></div>
                       <div class="browse">
