--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
     <link rel="stylesheet" href="assets/css/untitled.css" />
   </head>
   <style>
+    html {
+      height: 100vh;
+    }
+
     body {
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      width: 100%;
+      height: 100vh;
+      background-color: #ffffff;
+      position: fixed;
+      top: 0;
+      bottom: 0;
     }
     img {
       float: center;
