--- a/index.html
+++ b/index.html
@@ -116,11 +116,28 @@
 
         reader.readAsDataURL(input.files[0]);
       }
+
+      var takeScreenShot = function() {
+        html2canvas(document.getElementById("container"), {
+          onrendered: function(canvas) {
+            var tempcanvas = document.createElement("canvas");
+            tempcanvas.width = 350;
+            tempcanvas.height = 350;
+            var context = tempcanvas.getContext("2d");
+            context.drawImage(canvas, 112, 0, 288, 200, 0, 0, 350, 350);
+            var link = document.createElement("a");
+            link.href = tempcanvas.toDataURL("image/jpg"); //function blocks CORS
+            link.download = "screenshot.jpg";
+            link.click();
+          }
+        });
+      };
     }
   </script>
 
   <body background="images/bgimage.png">
-    <div class="features-boxed">
+    <div class="features-boxed" id="container">
+      <button onclick="takeScreenShot()">Snapshot</button>
       <div class="container">
         <div class="intro">
           <h1 class="display-1 text-center">CFS MINGO</h1>
@@ -454,6 +471,9 @@
         </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
