--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
       height: 100%;
       overflow: hidden;
     }
+    .container {
+      width: 1100px !important;
+    }
   </style>
   <script>
     function readURL(input, option) {
