--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     body {
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: 100%;
     }
     img {
       float: center;
@@ -72,12 +72,11 @@
     }
     html,
     body {
+      top: 0;
       margin: 0;
       height: 100%;
+      width: 100%;
       overflow: hidden;
-    }
-    .container {
-      width: 1100px !important;
     }
   </style>
   <script>
