--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          KALDERETA
+                          CALDERETA
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -254,7 +254,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          LASANA
+                          LASAGNA
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -326,7 +326,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          LETCHON
+                          LECHON
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
