--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>CFS MINGO - #EnjoyAtHome</title>
   <head>
     <meta charset="utf-8" />
     <meta
@@ -77,6 +78,10 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
+    }
+
+    .drop .cont .browse {
+      font-size: 1.3rem !important;
     }
   </style>
   <script>
