--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          GULAY
+                          WEARING CFS TEAM BUILDING SHIRT
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -187,7 +187,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          CALDERETA
+                          DRINKKING FROM A GLOBE TUMBLER
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -223,7 +223,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          SARDINAS
+                          SELFIE WITH A GLOBE PEN
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -259,7 +259,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          LASAGNA
+                          USING GLOBE ISSUED LAPTOP
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -295,7 +295,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          BULALO
+                          GLOBE AT HOME MODEM SELFIE
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -331,7 +331,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          LECHON
+                          SHOWING GLOBE ID
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -367,7 +367,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          CORNED BEEF
+                          WEARING GLOBE HOODIE
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -403,7 +403,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          CORDON BLEU
+                          SELFIE WITH GLOBE NOTEBOOK
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
@@ -439,7 +439,7 @@
                       <div class="cont">
                         <i class="fa fa-cutlery"></i>
                         <div class="tit">
-                          SINIGANG
+                          WEARING 0917 SHIRT
                         </div>
                         <div class="desc"></div>
                         <div class="browse">
