--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     }
   </script>
 
-  <body background="images/bgimage.png">
+  <body background="images/bgimagenew.png">
     <div class="zoom">
       <div class="features-boxed">
         <div class="container">
