--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           WEARING CFS TEAM BUILDING SHIRT
                         </div>
@@ -185,7 +185,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           DRINKKING FROM A GLOBE TUMBLER
                         </div>
@@ -221,7 +221,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           SELFIE WITH A GLOBE PEN
                         </div>
@@ -257,7 +257,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           USING GLOBE ISSUED LAPTOP
                         </div>
@@ -293,7 +293,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           GLOBE AT HOME MODEM SELFIE
                         </div>
@@ -329,7 +329,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           SHOWING GLOBE ID
                         </div>
@@ -365,7 +365,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           WEARING GLOBE HOODIE
                         </div>
@@ -401,7 +401,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           SELFIE WITH GLOBE NOTEBOOK
                         </div>
@@ -437,7 +437,7 @@
                   <div class="wrapper">
                     <div class="drop">
                       <div class="cont">
-                        <i class="fa fa-cutlery"></i>
+                        <i class="fa fa-camera"></i>
                         <div class="tit">
                           WEARING 0917 SHIRT
                         </div>
