--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     }
 
     .display-1 {
+      padding-top: 20px;
       font-size: 10rem;
       font-weight: 700 !important;
       line-height: 1.2;
@@ -82,6 +83,10 @@
 
     .drop .cont .browse {
       font-size: 1.3rem !important;
+    }
+    .features-boxed .features {
+      padding: 0 !important;
+      padding-top: 20px !important;
     }
   </style>
   <script>
